--- a/src/Views/Tenant/Tenant.style.css
+++ b/src/Views/Tenant/Tenant.style.css
@@ -1,21 +1,34 @@
 .tenant-filter-by-data {
-    width: 300px;
+    width: 400px;
+    margin-top: 15px;
 }
 
 .tenant-search-holder {
-    width: 300px;
-    margin-bottom: 20px;
+    width: 400px;
 }
 
 @media only screen and (max-width:768px) {
     .tenant-filter-by-data {
         width: 120px;
-        margin-top: 30px;
+        margin-top: 10px;
     }
     .tenant-search-holder {
         width: 120px
     }
     .tenant-table-row-holder {
-        width: 50px
+        width: 100px;
+    }
+}
+
+@media only screen and (max-width:375px) {
+    .tenant-filter-by-data {
+        width: 50px;
+        margin-top: 10px;
+    }
+    .tenant-search-holder {
+        width: 90px
+    }
+    .tenant-table-row-holder {
+        width: 100px;
     }
 }
